--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 
       <p>Radio check. Pilot, confirm. Connection broken. no commits</p>
       <p>Control to Pilot. Radio check, please submit restored Connection.</p>
+      <p>Attempting to communication-Sharion, out</p>
    </body>
 </html>
