--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
       <p>Control to Pilot. Radio check, please submit restored Connection.</p>
       <p>Attempting to communication-Sharion, out</p>
       <p>I think I got it to work. Trying to make changes</p>
+
+      <p>Control to Pilot. Cganges went through. We may move to step 6! Changes confirmed </p>
    </body>
 </html>
