--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
 
@@ -7,5 +10,6 @@
       <p>Control to Pilot. Radio check, please submit restored Connection.</p>
       <p>Attempting to communication-Sharion, out</p>
       <p>I think I got it to work. Trying to make changes</p>
+      <p>commit, commit, commit. Hahah!!!</p>
    </body>
 </html>
