--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
       <p>Attempting to communication-Sharion, out</p>
       <p>I think I got it to work. Trying to make changes</p>
 
-      <p>Control to Pilot. Cganges went through. We may move to step 6! Changes confirmedgi </p>
+      <p>Control to Pilot. Cganges went through. We may move to step 6! Changes confirmed </p>
    </body>
 </html>
