fixing my mistake

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <p>Control to Pilot. Radio check, please submit restored Connection.</p>
       <p>Attempting to communication-Sharion, out</p>
       <p>I think I got it to work. Trying to make changes</p>
+      <p>commit, commit, commit. Hahah!!!</p>
    </body>
 </html>
